# garlic-api

./: .dockerignore  .env.example  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 8715184b57f6_add_initial_models.py
src/impl/auth/: __init__.py  sessions.py
src/impl/database/: __init__.py  access.py  metadata.py  user.py
src/impl/types/: __init__.py  request.py
src/impl/users/: __init__.py  manager.py
src/routes/: __init__.py  auth.py
